# natiq-ultimate

./: .deployment_info  .env  .env.local  .gitignore  .vercelignore  GIT_STATUS_REPORT.md  INSTALL.md  PROJECT_COMPLETION_REPORT.md  README.md  add_articles.js  advanced_file_processor.py  ai-features.js  article-api.cjs  article.html  articles.html  auto-test.sh  backup.sh  check_install.py  debug-search.cjs  debug-server.cjs  deploy-diamond.sh  deploy-final.sh  deploy.sh  deploy_olympic.sh  earch torch  emergency_deploy.sh  final_monitor_fix.html  first-push.sh  fix_errors.js  fix_frontend.js  fix_ui_errors.js  fix_vercel_deploy.sh  fixed-search-server.cjs  index.html  index.html.backup  monitor.sh  natiq-ai-server.cjs  natiq-complete.cjs  natiq-server.cjs  package-lock.json  (+46 more)
algorithms/: hybrid_qna.js  keyword_qna.js  simple_keyword.js  simple_nlp.js  simple_semantic.js
api/: app.py  app.py.backup  app_backup_2.py  app_examples.py  ask.py  chat_features.py  diamond.js  index.js  index.py  math_engine.py  math_tutor.py  neural.py  pyproject.toml  requirements.txt  requirenment.txt  ui.html  vercel.json  wsgi.py
backend/: enhanced_ai.py  file_based_ai.py  free_api_ai.py  lightweight_ai.py  main.py  ml_simple.py  natiq_complete.py  natiq_server.py  natiq_smart.py  natiq_smart_simple.py  online_ai.py  real_test.py  requirements.txt  server.py  server_fixed.py  simple_test.py  smart_ai.py  test_nlp.py  test_server.py  tf_version.py
backup_20251206_231017/: PRODUCTION_README.md  README.md  api-endpoints.txt  deploy-production.sh  fix-search.sh  git-push-simple.sh  push.sh  (+16 more)
(+102 files in other folders)
