[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "natiq-olympic-core"
version = "1.0.0"
description = "Natiq Ultimate - Olympic Core System"
authors = [
    {name = "Natiq Team", email = "olympic@natiq.ai"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.black]
line-length = 88
target-version = ['py39']
